fix home page horizontal scroll (and split out the intro animation)

--- a/styles/intro-animation.css
+++ b/styles/intro-animation.css
@@ -6,7 +6,6 @@
     100% {
         opacity: 0;
         filter: url(#pixelate);
-        display: none;
     }
 }
 
